Fix h1 font size and adjust spacing in calc section.

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -53,6 +53,7 @@ h1 {
   text-align: center;
 
   @media (min-width: 90rem) {
+    font-size: 4rem;
     text-align: left;
   }
 }
