--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -67,14 +67,30 @@
   @media (min-width: 90rem) {
     flex-direction: row;
     align-items: start;
+    gap: 8rem;
   }
 }
 
 .calc__header {
-  max-width: 35.25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  @media (min-width: 48rem) {
+    max-width: 42.875rem;
+  }
 
   @media (min-width: 90rem) {
+    align-items: start;
+    max-width: 35.25rem;
     padding-top: 6rem;
+  }
+}
+
+.calc__title {
+  @media (min-width: 48rem) {
+    max-width: 11ch;
   }
 }
 
@@ -82,6 +98,7 @@
   text-align: center;
 
   @media (min-width: 90rem) {
+    max-width: 29rem;
     text-align: left;
   }
 }
